--- a/Pages-inside/blog.html
+++ b/Pages-inside/blog.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="tourindia-master\index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="About.html">About</a>
@@ -50,7 +50,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/blog-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -162,7 +162,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Tour India</p>
+          <p class="copyright text-muted"></p>
         </div>
       </div>
     </div>
