--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<nav class="navbar navbar-expand-lg  navbar-light">
 					<div class="container">
 						  <a class="navbar-brand" href="index.html">
-						  	<img src="img/logo.png" alt="">
+						  	<img src="img/logo1.png" alt="">
 						  </a>
 						  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						    <span class="text-white lnr lnr-menu"></span>
@@ -44,7 +44,7 @@
 						  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 						    <ul class="navbar-nav">
 								<li><a href="./Pages-inside/blog.html">Blogs</a></li>
-								<li><a href="#portfolio">Places</a></li>
+								<li><a href="place.html">Places</a></li>
 								<li><a href="#service">Services</a></li>
 								<li><a href="./Pages-inside/About.html">About Us</a></li>
 						    </ul>
@@ -59,9 +59,9 @@
 					<div class="container">
 						<div class="row fullscreen d-flex align-items-center justify-content-center">
 							<div class="banner-content col-lg-10">
-								<h5 class="text-uppercase">Be the part of this Wonderful Journey</h5>
+								<h5 class="text-uppercase">Welcome to India, I will tell you the beautiful places of India</h5>
 								<h1>
-									Incredible India!				
+									Welcome To India!				
 								</h1>
 								<a href="#" class="primary-btn text-uppercase">Explore Now</a>
 							</div>											
@@ -76,8 +76,8 @@
 						<div class="row d-flex justify-content-center">
 							<div class="menu-content col-lg-10">
 								<div class="title text-center">
-									<h1 class="mb-10">You'll fall in love with India</h1>
-									<p>Explore India from Kashmir to Kaniyakumari</p>
+									<h1 class="mb-10">Beautiful Place Of India</h1>
+									<p>Visit To India</p>
 								</div>
 							</div>
 						</div>
@@ -107,7 +107,7 @@
 				          <div class="item">
 				            <img src="img/p2.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h4>Gwalior Fort</h4>
+				              <h4><a href="Pages-inside/GwalioFort.html">Gwalior Fort</a></h4>
 				              <div class="cat">Madhya Pradesh</div>
 				            </div>
 				          </div>
@@ -116,7 +116,7 @@
 				          <div class="item">
 				            <img src="img/p9.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h5>Twang</h5>
+				              <h5><a href="Pages-inside\Twang.html">Twang</a></h5>
 				              <div class="cat">Arunachal Pradesh</div>
 				            </div>
 				          </div>
@@ -280,7 +280,7 @@
 								<div class="single-review">
 									<img src="img/c1.png" alt="">
 									<div class="title d-flex flex-row">
-										<a href="#"><h4>Fannie Rowe</h4></a>									
+										<a href="#"><h4>puskar</h4></a>									
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
@@ -296,7 +296,7 @@
 								<div class="single-review">
 									<img src="img/c3.png" alt="">
 									<div class="title d-flex flex-row">
-										<a href="#"><h4>Lillie Summers</h4></a>									
+										<a href="#"><h4>Kapil</h4></a>									
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
@@ -314,7 +314,7 @@
 								<div class="single-review">
 									<img src="img/c2.png" alt="">
 									<div class="title d-flex flex-row">
-										<a href="#"><h4>Bob Marley</h4></a>									
+										<a href="#"><h4>Nitin</h4></a>									
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
@@ -330,7 +330,7 @@
 								<div class="single-review">
 									<img src="img/c4.png" alt="">
 									<div class="title d-flex flex-row">
-										<a href="#"><h4>Jackie Chan</h4></a>									
+										<a href="#"><h4>Nikil</h4></a>									
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
@@ -361,14 +361,14 @@
 										We Provide Tour Plans for your most comfortable travel ever. Let yourself dive into the Beauty, Culture &amp; festivals of India. Have You're Good time at India.
 									</p>
 									<p class="footer-text">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This Website is created with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://github.com/mrjatinchauhan" target="_blank">Jatin Chauhan</a>
+<script>document.write(new Date().getFullYear());</script>  <i class="fa fa-heart-o" aria-hidden="true"></i>  <a href="https://github.com/mrjatinchauhan" target="_blank"></a>
 								</p>	
 								</div>
 							</div>
 							<div class="col-lg-5  col-md-6 col-sm-6">
 								<div class="single-footer-widget">
-									<h6>Newsletter</h6>
-									<p>Stay update with our latest</p>
+									<h6></h6>
+									<p></p>
 									<div class="" id="mc_embed_signup">
 							         <form target="_blank"  action="" method="get" class="form-inline">
 											<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Your Email Here '" required="" type="email">
